# avena_commons

./: .cursorrules  .gitignore  .readthedocs.yaml  .ruff.toml  CLAUDE.md  COMPARISON_OLD_VS_NEW.md  MANIFEST.in  README.md  TEST_COVERAGE_REPORT.md  __init__.py  camera_server_192.168.1.10_config copy.json  complete_qr_configs.py  event_driven_client.py  io_config full_new.json  io_server.py  mkdocs.yml  pyproject.toml  real_camera_cpu_benchmark.py  requirements-docs.txt  requirements.txt  setup.py  test_apriltag_attrs.py  test_catchtime.py  test_dashboard_config.json  test_event_listener.py  test_watchdog_config.json  tox.ini
custom_dir/actions/: database_update_action_aps.py
custom_dir/conditions/: database_condition_aps.py
docs/: connector_worker_usage.md  error_tracking_enhancement.md  index.md  io_event_listener.md  io_virtual_device_error_access.md  munchies.md  orchestrator.md  pepper_camera_benchmark_analysis.md  perla-dokumentacja-implementacji.md  sensor_watchdog.md  supervisor_robot_controller_usage.md  utils_usage.md  warehouse.md
docs/api/: avena_commons.md
docs/api/io/: io_event_listener.md
docs/api/orchestrator/: orchestrator.md
docs/architecture/: 01-orchestrator-concept.md  02-event-listener-refactor.md  06-event-listener-fsm-implementation-guide.md  README_DASHBOARD_TREE.md  error-isolation-implementation.md  orchestrator-analysis-and-implementation-plan.md  orchestrator-implementation-detailed.md
docs/camera/: _run_image_processing_workers_przebieg.md  caly_przebieg_przetwarzania_obrazow.md  camera_process_flow.md  camera_process_overview.md  multi_camera_sync_implementation.md
docs/orchestrator/: dynamic_action_loading.md  error_message_condition.md  error_message_condition_io_devices.md  evaluate_condition_action.md  implementacja_database_list_condition.md  implementacja_lynx_refund_approve.md  implementacja_restart_orders_action.md  implementacja_scenario_execution_counter.md  implementacja_send_custom_command.md  run_services_scenarios.md  scenario_context_refactor_summary.md  scenario_flow_diagram.md  send_sms_to_customer_action.md  template_rendering_optimization.md  virtual_device_error_condition.md
docs/pepper/: pepper_connector_implementation_analysis.md  pepper_implementation_analysis.md
docs/robot/: gripper_architecture.md
docs/supervisor/: supervisor_robot_controller.md
examples/: event_pool_example.py
install/: pyorbbecsdk-2.0.13-cp310-cp310-win_amd64.whl  pyorbbecsdk-2.0.13-cp312-cp312-win_amd64.whl
resources/ref/realsense/: masks.json
src/avena_commons/: __init__.py  install_sdk.py
src/avena_commons/camera/: camera.py
src/avena_commons/config/: __init__.py  common.py  controller.py
src/avena_commons/connection/: __init__.py  shm.py
src/avena_commons/io/: __init__.py  (+1 more)
tests/: README_test_services.md  __init__.py  box_detector_test_rotation.ipynb  camera_server_192.168.1.10_config_general.json  complete_qr_configs.py  debug_client_response.py  demo_control_loops.py  event_driven_client.py  load_images_listener.py  loadgen_taskset_constant.py  monitor_cpu_amd.py  multi_camera_benchmark_config copy.json  multi_camera_pepper_benchmark.py  open_ethercat_master.py  pepper_camera_config_example.json  pepper_camera_listener.py  pepper_camera_pepper_eventlistener_cpu_benchmark.py  pepper_listener.py  qr_detector_fusion.ipynb  qr_detector_test.ipynb  run_restore_terminals.sh  sync_align.py  test_camera.py  test_client.py  test_dashboard.py  test_error_manager.py  test_event_listener.py  test_full_scenario.py  test_loop_sync.py  test_nayax_server.py  test_new_action_system.py  test_orchestrator.py  test_orchestrator_scenario.py  test_parallel_qr_detector.py  test_send_email_action.py  test_sequence_restart.py  test_server.py  test_vision_detect_box.py  test_vision_detect_qr.py  test_watchdog.py  (+1 more)
tests/blockly/: box_detection.drawio  box_detection_project.xml  index.html  my_blocks.js  my_python.js
tests/integration/: test_error_isolation_examples.py  test_evaluate_condition_integration.py
tests/perla_functions/: camera.py  fill_functions.py  final_functions.py  nozzle.py  pepper_autonomous_benchmark_config.json.example  pepper_camera_autonomous_benchmark_config.json.example  pepper_camera_virtual_config.json.example  pepper_detector.py  perla.py  pipeline-papryczki-kamera.json  search_functions.py  utils_functions.py
tests/services/: README_orchestrator_scenarios.md  __init__.py  base_test_service.py  io_service.py  munchies_algo_service.py  run_all_services.py  supervisor_service.py
tests/unit/: test_basic_imports.py  test_event_pool.py  test_p7674_fsm.py  test_path_debug.py  test_physical_device_base.py
utils/: calibrate_camera.py  calibrate_camera_nogui.py  instrukcja_kalibracji_kamery.md
(+325 files in other folders)
