[build-system]
requires = ["setuptools>=75.1.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "avena_commons"
version = "1.3.4"
description = "A small utility library for working with Avena Robotics"
authors = [
    { name = "Avena Robotics", email = "lukasz.lecki@pomagier.info" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=7.0.0",
    "colorify>=1.1.0",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "opencv-python>=4.11.0.86",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.scripts]
run_system_dashboard = "avena_commons.system_dashboard.app:run_app"

[project.urls]
Homepage = "https://github.com/avena-robotics/avena_commons"